# universal-decentralized-identity

./: README.md  package-lock.json  package.json
backend/: Cargo.toml  DIDVault.sol  README.md  crypto.rs  did.rs  hardhat.config.js  ipfs.rs  main.rs  package-lock.json  package.json  relayer.rs  server.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/icons/: CircuitVaultIcon.jsx  ConstellationIcon.jsx  EnergyFlowIcon.jsx  FractalKeyIcon.jsx  index.js
python-services/: main.py  requirements.txt
