[package]
name = "did-vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
sha2 = "0.10"
ethers = { version = "2.0.0", features = ["abigen", "rustls"] }
dotenv = "0.15"
hex = "0.4"
async-trait = "0.1"
base58 = "0.1.0"
